* Fix content height and add y scrollbar.

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,6 +4,23 @@
  */
  @import url(https://fonts.googleapis.com/earlyaccess/cwtexkai.css);
  
+ ::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4); 
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(100,100,100,0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
 body.dark {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66, 140, 255;
